--- a/style3.css
+++ b/style3.css
@@ -4,16 +4,10 @@
     box-sizing: border-box;
 }
 
-body{
-    height: 100%;
+body {
     background-color:#212529;
+    }
 
-    background-image: url("IMG_2613.JPG");
-    /* height: 100%; */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
     header {
         background-color: #131313;
         border-bottom: 3px solid;
@@ -21,21 +15,20 @@ body{
     }
 
     footer {
-        margin-top: 1000px;
         background-color: #131313;
         border-top: 3px solid black;
         text-align: center;
         padding: 10px;
     }
 
-    /* article {
+    article {
         background-color: #131313;
         margin: 0 auto 20px;
         border: 2px solid black;
         padding: 50px;
         width: 70%;
         border-radius: 10px;
-    } */
+    }
 
     .dropbtn {
         background-color: transparent;
@@ -46,10 +39,12 @@ body{
         cursor: pointer;
       }
       
+      
       .dropdown {
         position: relative;
         display: inline-block;
       }
+      
       
       .dropdown-content {
         display: none;
@@ -60,6 +55,7 @@ body{
         z-index: 1;
       }
       
+     
       .dropdown-content a {
         color: #ffffff;
         padding: 12px 16px;
@@ -67,15 +63,19 @@ body{
         display: block;
       }
       
+      
       .dropdown-content a:hover {background-color: #7E00FF}
+      
       
       .dropdown:hover .dropdown-content {
         display: block;
       }
       
+      
       .dropdown:hover .dropbtn {
         background-color: #7E00FF;
       }
+
 
     .nav-bar{
         display: inline;
@@ -83,16 +83,36 @@ body{
 
     #brand-title {
         color: #ffffff;
-        margin-right: 975px;
+        margin-right: 1050px;
         margin-left: 25px;
         font-size: 20px;
     }
 
-    /* main {
+    main {
         text-align: center;
-    } */
+    }
     
     p{
         color: #ffffff;
     }
-   
+    h2{
+        color: #ffffff;
+        margin-bottom: 10px;
+    }
+    form{
+        border: 2px dotted black;
+        width: 30%;
+        margin: 0 auto 20px;
+        border-radius: 20px;
+        padding: 20px;
+    }
+
+    .form-label{
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+
+    input, textarea{
+        padding: 5px;
+        border-radius: 5px;
+    }
